Redirect to the Wellington event!

--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta http-equiv="refresh" content="0;URL='http://railsgirls.com/christchurch'">
+    <meta http-equiv="refresh" content="0;URL='http://railsgirls.com/wellington'">
   </head>
   <body>
-    Taking you to the Rails Girls Christchurch page...
+    Taking you to the Rails Girls Wellington page...
   </body>
 </html>
